finish auth.service.ts, update dtos and types, schema.sql
