# src/dtos/registerUser.ts
@@ -1,0 +1,5 @@
+export class RegisterUser {
+    'username': string;
+    'email': string;
+    'password': string;
+}
