# src/server/routes/auth.routes.ts
@@ -1,1 +1,8 @@
 import { Router } from "express";
+
+const router = Router();
+
+router.post('/register', )
+router.post('/login', );
+
+export default router;
